--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     container_name: datanode2
     restart: always
     volumes:
-      - hadoop_datanode:/hadoop/dfs/data2
+      - hadoop_datanode2:/hadoop/dfs/data2
     environment:
       SERVICE_PRECONDITION: "namenode:9870"
     env_file:
@@ -42,7 +42,7 @@ services:
     container_name: datanode3
     restart: always
     volumes:
-      - hadoop_datanode:/hadoop/dfs/data3
+      - hadoop_datanode3:/hadoop/dfs/data3
     environment:
       SERVICE_PRECONDITION: "namenode:9870"
     env_file:
@@ -126,4 +126,6 @@ services:
 volumes:
   hadoop_namenode:
   hadoop_datanode:
+  hadoop_datanode2:
+  hadoop_datanode3:
   hadoop_historyserver:
