--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   namenode:
-    image: bde2020/hadoop-namenode:2.0.0-hadoop3.2.1-java8
+    image: namenode:1.1 #bde2020/hadoop-namenode:2.0.0-hadoop3.2.1-java8
     container_name: namenode
     restart: always
     ports:
@@ -10,6 +10,7 @@ services:
       - 9000:9000
     volumes:
       - hadoop_namenode:/hadoop/dfs/name
+      - HadoopBase:/opt/hadoop-3.2.1
     environment:
       - CLUSTER_NAME=test
     env_file:
@@ -97,31 +98,46 @@ services:
       
   hive-server:
     image: bde2020/hive:2.3.2-postgresql-metastore
+    container_name: hive
     env_file:
       - ./hadoop.env
     environment:
       HIVE_CORE_CONF_javax_jdo_option_ConnectionURL: "jdbc:postgresql://hive-metastore/metastore"
       SERVICE_PRECONDITION: "hive-metastore:9083"
+    #volumes:
+    #  - hadoop_hive-server: /hadoop/hive/hive-server
     ports:
       - "10000:10000"
       
   hive-metastore:
     image: bde2020/hive:2.3.2-postgresql-metastore
+    container_name: hive-metastore
     env_file:
       - ./hadoop.env
     command: /opt/hive/bin/hive --service metastore
     environment:
       SERVICE_PRECONDITION: "namenode:9870 datanode:9864 datanode2:9864 datanode3:9864 hive-metastore-postgresql:5432"
+    #volumes:
+    #  - hadoop_hive-metastore: /hadoop/hive/hive-metastore
     ports:
       - "9083:9083"
       
-      
   hive-metastore-postgresql:
     image: bde2020/hive-metastore-postgresql:2.3.0
-  presto-coordinator:
-    image: shawnzhu/prestodb:0.181
     ports:
-      - "8080:8080"
+      - "5432:5432"
+      
+#  sqoop:
+#    image: sqoop:5
+#    container_name: sqoop
+#    environment:
+#      SERVICE_PRECONDITION: "namenode:9870 hive:10000"
+#    volumes:
+#      - HadoopBase:/opt/hadoop-3.2.1
+#  presto-coordinator:
+#    image: shawnzhu/prestodb:0.181
+#    ports:
+#       - "8080:8080"
   
 volumes:
   hadoop_namenode:
@@ -129,3 +145,6 @@ volumes:
   hadoop_datanode2:
   hadoop_datanode3:
   hadoop_historyserver:
+  hadoop_hive-server:
+  hadoop_hive-metastore:
+  HadoopBase:
