--- a/hive-server/Dockerfile
+++ b/hive-server/Dockerfile
@@ -1,16 +1,11 @@
-FROM bde2020/hadoop-namenode:2.0.0-hadoop3.2.1-java8
+FROM bde2020/hive:2.3.2-postgresql-metastore
 
 MAINTAINER Ivan Ermilov <ivan.s.ermilov@gmail.com>
 
 HEALTHCHECK CMD curl -f http://localhost:9870/ || exit 1
 
-ENV HDFS_CONF_dfs_namenode_name_dir=file:///hadoop/dfs/name
-RUN mkdir -p /hadoop/dfs/name
-VOLUME /hadoop/dfs/name
-VOLUME /opt/hadoop3.2.1
-
 #Install Sqoop
-RUN apt-get update && apt-get install -y wget && apt-get install -y vim && \
+RUN cd # && cd ../ && apt-get update && apt-get install -y wget && apt-get install -y vim && \
 	wget http://archive.apache.org/dist/sqoop/1.4.5/sqoop-1.4.5.bin__hadoop-2.0.4-alpha.tar.gz && \
 	wget https://github.com/microsoft/mssql-jdbc/releases/download/v8.2.0/mssql-jdbc-8.2.0.jre8.jar && \
 	tar xzf sqoop-1.4.5.bin__hadoop-2.0.4-alpha.tar.gz && \
@@ -21,16 +16,17 @@ RUN apt-get update && apt-get install -y wget && apt-get install -y vim && \
     echo "export SQOOP_HOME=/usr/lib/sqoop"  >> ~/.bashrc && \
     echo "export PATH=$PATH:/usr/lib/sqoop/bin" >> ~/.bashrc && \
     echo "export HADOOP_COMMON_HOME=/opt/hadoop-3.2.1" >> /usr/lib/sqoop/conf/sqoop-env.sh && \
-    echo "export HADOOP_MAPRED_HOME=/opt/hadoop-3.2.1" >> /usr/lib/sqoop/conf/sqoop-env.sh && \
-
+    echo "export HADOOP_MAPRED_HOME=/opt/hadoop-3.2.1" >> /usr/lib/sqoop/conf/sqoop-env.sh
 #	echo "export HADOOP_COMMON_HOME=/opt/hadoop-3.2.1" >> ~/.bashrc && \
 #	echo "export HADOOP_MAPRED_HOME=/opt/hadoop-3.2.1" >> ~/.bashrc && \
 #	apt-get --purge remove -y wget && \
-	apt-get clean
+#	apt-get clean
 
-ADD run.sh /run.sh
-RUN chmod a+x /run.sh
+#COPY startup.sh /usr/local/bin/
+#RUN chmod +x /usr/local/bin/startup.sh
 
-EXPOSE 9870
+COPY entrypoint.sh /opt/
+RUN chmod +x /usr/local/bin/entrypoint.sh
 
-CMD ["/run.sh"]
+ENTRYPOINT ["entrypoint.sh"]
+CMD startup.sh
